2011-08-05  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-88
	* make sure to tag from either trunk or a branch instead of
	  the local directory
	* M bin/avn.py

2011-07-10  Paolo Calafiura  <calaf@localhost6.localdomain6>

	* tagging PyUtils-00-10-87
	* python/PoolFile.py (PoolFileCatalog._pfn): handle atlas_g4 trf case,
	in which input files contain an fid-like string in name (#84085)

2011-06-15  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-86
	* fixes for tc-show-clients and tc-submit-tag
	* M python/scripts/tc_submit_tag.py
	* M python/scripts/tc_show_clients.py
	* M python/AmiLib.py

	* tagging PyUtils-00-10-85
	* update ref-test for TAG
	* M python/AthFile/tests.py

2011-06-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-84
	* preliminary work for better support for TAG files
	* M python/AthFile/impl.py

	* tagging PyUtils-00-10-83
	* fix bug #83034
	* do not propagate parent's os.environ for PYTHONINSPECT and
	  ATHENA_PROC_NUMBER env.vars to AthFileServer process
	* M python/AthFile/impl.py

2011-05-31  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-82
	* remove spurious printouts when using 'pkgco -r pkg'
	* M bin/pkgco.py

2011-05-27  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-81
	* adding a new tc command: show-clients to get the list of clients
	  for a given cmt package (and check them out)
	* A python/scripts/tc_show_clients.py
	* M python/AmiLib.py
	* M python/scripts/__init__.py

2011-05-25  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-79
	* obo Vahko: support for merging HITS files
	* M python/PoolFile.py

2011-05-24  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-78
	* improve resilience of diff-root-files in the face of
	  out-of-synch iterators over leaves
	* M python/scripts/diff_root_files.py

	* tagging PyUtils-00-10-77
	* fix bug 82176: gzip the athfile-cache files